fix frontend: filter styling fix for too long filter names

--- a/src/serve/styles/authed.filters.css
+++ b/src/serve/styles/authed.filters.css
@@ -8,3 +8,7 @@
 .filters .filter-list .filter.selected {
   background-color: #fff8b857;
 }
+
+.filters .filter-list .filter {
+  word-break: break-word;
+}
